--- a/EventPlanner/Pages/Registrations/Create.cshtml
+++ b/EventPlanner/Pages/Registrations/Create.cshtml
@@ -14,12 +14,12 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Registration.EventItemID" class="control-label"></label>
-                <select asp-for="Registration.EventItemID" class ="form-control" asp-items="ViewBag.EventItemID" ></select>
+                <label asp-for="Registration.EventItemId" class="control-label"></label>
+                <select asp-for="Registration.EventItemId" class ="form-control" asp-items="ViewBag.EventItemID" ></select>
             </div>
             <div class="form-group">
-                <label asp-for="Registration.ParticipantID" class="control-label"></label>
-                <select asp-for="Registration.ParticipantID" class ="form-control" asp-items="ViewBag.ParticipantID" ></select>
+                <label asp-for="Registration.ParticipantId" class="control-label"></label>
+                <select asp-for="Registration.ParticipantId" class ="form-control" asp-items="ViewBag.ParticipantID" ></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
