--- a/EventPlanner.Mobile/Pages/OrganizersEntryPage.xaml
+++ b/EventPlanner.Mobile/Pages/OrganizersEntryPage.xaml
@@ -12,6 +12,11 @@
         <Entry x:Name="EmailEntry" Placeholder="Email (required)" Keyboard="Email"/>
 
         <Button Text="Save organizer" Clicked="OnSaveClicked"/>
+        
+        <HorizontalStackLayout Spacing="10">
+            <Button Text="Update organizer" Clicked="OnUpdateClicked"/>
+            <Button Text="Clear" Clicked="OnClearClicked"/>
+        </HorizontalStackLayout>
 
         <BoxView HeightRequest="1" Opacity="0.3"/>
 
@@ -20,7 +25,9 @@
             <Button Text="Refresh" Clicked="OnRefreshClicked" />
         </HorizontalStackLayout>
 
-        <CollectionView x:Name="OrganizersView">
+        <CollectionView x:Name="OrganizersView"
+                        SelectionMode="Single"
+                        SelectionChanged="OnSelectionChanged">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame Padding="10" Margin="0,6">
